// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser fixtures Fixtures remain consistent #wtBpsn 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 20,
                      "line": 1,
                      "offset": 19,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "text",
                  "value": "A simple task",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 20,
                  "line": 1,
                  "offset": 19,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 27,
                      "line": 2,
                      "offset": 46,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 2,
                      "offset": 26,
                    },
                  },
                  "type": "text",
                  "value": "A second simple task",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 27,
                  "line": 2,
                  "offset": 46,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 2,
                  "offset": 26,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 27,
              "line": 2,
              "offset": 46,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 2,
              "offset": 20,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 27,
                      "line": 3,
                      "offset": 73,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 3,
                      "offset": 53,
                    },
                  },
                  "type": "text",
                  "value": "One more simple task",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 27,
                  "line": 3,
                  "offset": 73,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 3,
                  "offset": 53,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 27,
              "line": 3,
              "offset": 73,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 47,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 3,
          "offset": 73,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 27,
      "line": 3,
      "offset": 73,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parser fixtures Fixtures remain consistent #wtBpsn 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 19,
                      "line": 1,
                      "offset": 18,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "text",
                  "value": "A first task",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 23,
                    },
                    "indent": Array [
                      3,
                    ],
                    "start": Object {
                      "column": 19,
                      "line": 1,
                      "offset": 18,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 29,
                      "line": 2,
                      "offset": 49,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 23,
                    },
                  },
                  "type": "text",
                  "value": "With a second line of text",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 29,
                  "line": 2,
                  "offset": 49,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 2,
              "offset": 49,
            },
            "indent": Array [
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 42,
                      "line": 3,
                      "offset": 91,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 3,
                      "offset": 56,
                    },
                  },
                  "type": "text",
                  "value": "A second task without a second line",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 42,
                  "line": 3,
                  "offset": 91,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 3,
                  "offset": 56,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 42,
              "line": 3,
              "offset": 91,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 50,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 42,
          "line": 3,
          "offset": 91,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 42,
      "line": 3,
      "offset": 91,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parser fixtures Fixtures remain consistent #wtBpsn 3`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                  },
                  "type": "text",
                  "value": "Can we heading?",
                },
              ],
              "depth": 1,
              "position": Position {
                "end": Object {
                  "column": 24,
                  "line": 1,
                  "offset": 23,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "heading",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parser fixtures Fixtures remain consistent #wtBpsn 4`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 33,
                      "line": 1,
                      "offset": 32,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                  },
                  "type": "text",
                  "value": "Will a heading fit here?",
                },
              ],
              "depth": 1,
              "position": Position {
                "end": Object {
                  "column": 35,
                  "line": 1,
                  "offset": 34,
                },
                "indent": Array [],
                "start": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "heading",
            },
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 18,
                      "line": 3,
                      "offset": 55,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 3,
                      "offset": 40,
                    },
                  },
                  "type": "text",
                  "value": "Multiple paras?",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 18,
                  "line": 3,
                  "offset": 55,
                },
                "indent": Array [],
                "start": Object {
                  "column": 3,
                  "line": 3,
                  "offset": 40,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 18,
              "line": 3,
              "offset": 55,
            },
            "indent": Array [
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": true,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 18,
          "line": 3,
          "offset": 55,
        },
        "indent": Array [
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 18,
      "line": 3,
      "offset": 55,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parser fixtures Fixtures remain consistent #wtBpsn 5`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "text",
                  "value": "A first line task",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 28,
                    },
                    "indent": Array [
                      3,
                    ],
                    "start": Object {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 22,
                      "line": 2,
                      "offset": 47,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 2,
                      "offset": 28,
                    },
                  },
                  "type": "inlineCode",
                  "value": "after:2020-02-024",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 22,
                  "line": 2,
                  "offset": 47,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 22,
              "line": 2,
              "offset": 47,
            },
            "indent": Array [
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 22,
          "line": 2,
          "offset": 47,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 3,
      "offset": 48,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parser listToTasks() Generates tasks #HetQot 1`] = `
Array [
  Object {
    "contentMarkdown": "A simple task",
    "data": Object {},
    "finished": false,
    "id": "{\\"data\\":{},\\"text\\":\\"A simple task\\"}",
    "isSequential": false,
    "isTask": true,
    "parentId": "",
  },
  Object {
    "contentMarkdown": "A second simple task",
    "data": Object {},
    "finished": false,
    "id": "{\\"data\\":{},\\"text\\":\\"A second simple task\\"}",
    "isSequential": false,
    "isTask": true,
    "parentId": "",
  },
  Object {
    "contentMarkdown": "One more simple task",
    "data": Object {},
    "finished": false,
    "id": "{\\"data\\":{},\\"text\\":\\"One more simple task\\"}",
    "isSequential": false,
    "isTask": true,
    "parentId": "",
  },
]
`;

exports[`parser parseMdast() Generates sections with tasks #otm70r 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 16,
              "line": 1,
              "offset": 15,
            },
            "indent": Array [],
            "start": Object {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "First heading",
        },
      ],
      "depth": 1,
      "position": Position {
        "end": Object {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 23,
                      "line": 3,
                      "offset": 39,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 3,
                      "offset": 23,
                    },
                  },
                  "type": "text",
                  "value": "A top level task",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 3,
                      "line": 4,
                      "offset": 44,
                    },
                    "indent": Array [
                      3,
                    ],
                    "start": Object {
                      "column": 23,
                      "line": 3,
                      "offset": 39,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 21,
                      "line": 4,
                      "offset": 62,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 4,
                      "offset": 44,
                    },
                  },
                  "type": "inlineCode",
                  "value": "after:2020-02-23",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 22,
                      "line": 4,
                      "offset": 63,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 21,
                      "line": 4,
                      "offset": 62,
                    },
                  },
                  "type": "text",
                  "value": " ",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 37,
                      "line": 4,
                      "offset": 78,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 22,
                      "line": 4,
                      "offset": 63,
                    },
                  },
                  "type": "inlineCode",
                  "value": "by:2020-02-24",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 38,
                      "line": 4,
                      "offset": 79,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 37,
                      "line": 4,
                      "offset": 78,
                    },
                  },
                  "type": "text",
                  "value": " ",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 49,
                      "line": 4,
                      "offset": 90,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 38,
                      "line": 4,
                      "offset": 79,
                    },
                  },
                  "type": "inlineCode",
                  "value": "id:abc123",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 49,
                  "line": 4,
                  "offset": 90,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 7,
                  "line": 3,
                  "offset": 23,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 49,
              "line": 4,
              "offset": 90,
            },
            "indent": Array [
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 17,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 20,
                      "line": 5,
                      "offset": 110,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 5,
                      "offset": 97,
                    },
                  },
                  "type": "text",
                  "value": "A second task",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 3,
                      "line": 6,
                      "offset": 115,
                    },
                    "indent": Array [
                      3,
                    ],
                    "start": Object {
                      "column": 20,
                      "line": 5,
                      "offset": 110,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 21,
                      "line": 6,
                      "offset": 133,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 6,
                      "offset": 115,
                    },
                  },
                  "type": "inlineCode",
                  "value": "after:2020-01-01",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 22,
                      "line": 6,
                      "offset": 134,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 21,
                      "line": 6,
                      "offset": 133,
                    },
                  },
                  "type": "text",
                  "value": " ",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 37,
                      "line": 6,
                      "offset": 149,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 22,
                      "line": 6,
                      "offset": 134,
                    },
                  },
                  "type": "inlineCode",
                  "value": "by:2020-02-25",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 37,
                  "line": 6,
                  "offset": 149,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 7,
                  "line": 5,
                  "offset": 97,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 37,
              "line": 6,
              "offset": 149,
            },
            "indent": Array [
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 91,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 37,
          "line": 6,
          "offset": 149,
        },
        "indent": Array [
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 3,
          "offset": 17,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 15,
              "line": 8,
              "offset": 165,
            },
            "indent": Array [],
            "start": Object {
              "column": 4,
              "line": 8,
              "offset": 154,
            },
          },
          "type": "text",
          "value": "Sub heading",
        },
      ],
      "depth": 2,
      "position": Position {
        "end": Object {
          "column": 15,
          "line": 8,
          "offset": 165,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 151,
        },
      },
      "type": "heading",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 36,
              "line": 10,
              "offset": 202,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 167,
            },
          },
          "type": "text",
          "value": "Some text under the second heading.",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 36,
          "line": 10,
          "offset": 202,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 10,
          "offset": 167,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 17,
                      "line": 12,
                      "offset": 220,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 12,
                      "offset": 210,
                    },
                  },
                  "type": "text",
                  "value": "Third task",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 3,
                      "line": 13,
                      "offset": 225,
                    },
                    "indent": Array [
                      3,
                    ],
                    "start": Object {
                      "column": 17,
                      "line": 12,
                      "offset": 220,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 21,
                      "line": 13,
                      "offset": 243,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 13,
                      "offset": 225,
                    },
                  },
                  "type": "inlineCode",
                  "value": "after:2020-02-23",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 22,
                      "line": 13,
                      "offset": 244,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 21,
                      "line": 13,
                      "offset": 243,
                    },
                  },
                  "type": "text",
                  "value": " ",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 37,
                      "line": 13,
                      "offset": 259,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 22,
                      "line": 13,
                      "offset": 244,
                    },
                  },
                  "type": "inlineCode",
                  "value": "by:2020-02-25",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 37,
                  "line": 13,
                  "offset": 259,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 7,
                  "line": 12,
                  "offset": 210,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 37,
              "line": 13,
              "offset": 259,
            },
            "indent": Array [
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 204,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 30,
                      "line": 14,
                      "offset": 289,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 7,
                      "line": 14,
                      "offset": 266,
                    },
                  },
                  "type": "text",
                  "value": "Fourth task on the list",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 3,
                      "line": 15,
                      "offset": 294,
                    },
                    "indent": Array [
                      3,
                    ],
                    "start": Object {
                      "column": 30,
                      "line": 14,
                      "offset": 289,
                    },
                  },
                  "type": "break",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 21,
                      "line": 15,
                      "offset": 312,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 15,
                      "offset": 294,
                    },
                  },
                  "type": "inlineCode",
                  "value": "after:2020-01-01",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 22,
                      "line": 15,
                      "offset": 313,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 21,
                      "line": 15,
                      "offset": 312,
                    },
                  },
                  "type": "text",
                  "value": " ",
                },
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 37,
                      "line": 15,
                      "offset": 328,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 22,
                      "line": 15,
                      "offset": 313,
                    },
                  },
                  "type": "inlineCode",
                  "value": "by:2020-02-24",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 37,
                  "line": 15,
                  "offset": 328,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 7,
                  "line": 14,
                  "offset": 266,
                },
              },
              "type": "paragraph",
            },
            Object {
              "children": Array [
                Object {
                  "checked": false,
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "position": Position {
                            "end": Object {
                              "column": 26,
                              "line": 16,
                              "offset": 354,
                            },
                            "indent": Array [],
                            "start": Object {
                              "column": 9,
                              "line": 16,
                              "offset": 337,
                            },
                          },
                          "type": "text",
                          "value": "Nested task first",
                        },
                      ],
                      "position": Position {
                        "end": Object {
                          "column": 26,
                          "line": 16,
                          "offset": 354,
                        },
                        "indent": Array [],
                        "start": Object {
                          "column": 9,
                          "line": 16,
                          "offset": 337,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": Position {
                    "end": Object {
                      "column": 26,
                      "line": 16,
                      "offset": 354,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 16,
                      "offset": 331,
                    },
                  },
                  "spread": false,
                  "type": "listItem",
                },
                Object {
                  "checked": false,
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "position": Position {
                            "end": Object {
                              "column": 27,
                              "line": 17,
                              "offset": 381,
                            },
                            "indent": Array [],
                            "start": Object {
                              "column": 9,
                              "line": 17,
                              "offset": 363,
                            },
                          },
                          "type": "text",
                          "value": "Second nested task",
                        },
                      ],
                      "position": Position {
                        "end": Object {
                          "column": 27,
                          "line": 17,
                          "offset": 381,
                        },
                        "indent": Array [],
                        "start": Object {
                          "column": 9,
                          "line": 17,
                          "offset": 363,
                        },
                      },
                      "type": "paragraph",
                    },
                  ],
                  "position": Position {
                    "end": Object {
                      "column": 27,
                      "line": 17,
                      "offset": 381,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 3,
                      "line": 17,
                      "offset": 357,
                    },
                  },
                  "spread": false,
                  "type": "listItem",
                },
              ],
              "ordered": false,
              "position": Position {
                "end": Object {
                  "column": 27,
                  "line": 17,
                  "offset": 381,
                },
                "indent": Array [
                  3,
                ],
                "start": Object {
                  "column": 3,
                  "line": 16,
                  "offset": 331,
                },
              },
              "spread": false,
              "start": null,
              "type": "list",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 27,
              "line": 17,
              "offset": 381,
            },
            "indent": Array [
              1,
              1,
              1,
            ],
            "start": Object {
              "column": 1,
              "line": 14,
              "offset": 260,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": false,
      "position": Position {
        "end": Object {
          "column": 27,
          "line": 17,
          "offset": 381,
        },
        "indent": Array [
          1,
          1,
          1,
          1,
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 12,
          "offset": 204,
        },
      },
      "spread": false,
      "start": null,
      "type": "list",
    },
    Object {
      "children": Array [
        Object {
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 19,
              "offset": 411,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 19,
              "offset": 383,
            },
          },
          "type": "text",
          "value": "More text without a heading.",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 29,
          "line": 19,
          "offset": 411,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 19,
          "offset": 383,
        },
      },
      "type": "paragraph",
    },
    Object {
      "children": Array [
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 25,
                      "line": 21,
                      "offset": 437,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 8,
                      "line": 21,
                      "offset": 420,
                    },
                  },
                  "type": "text",
                  "value": "A sequential task",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 25,
                  "line": 21,
                  "offset": 437,
                },
                "indent": Array [],
                "start": Object {
                  "column": 8,
                  "line": 21,
                  "offset": 420,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 25,
              "line": 21,
              "offset": 437,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 21,
              "offset": 413,
            },
          },
          "spread": false,
          "type": "listItem",
        },
        Object {
          "checked": false,
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 32,
                      "line": 22,
                      "offset": 469,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 8,
                      "line": 22,
                      "offset": 445,
                    },
                  },
                  "type": "text",
                  "value": "A second sequential task",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 32,
                  "line": 22,
                  "offset": 469,
                },
                "indent": Array [],
                "start": Object {
                  "column": 8,
                  "line": 22,
                  "offset": 445,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 32,
              "line": 22,
              "offset": 469,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 22,
              "offset": 438,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": true,
      "position": Position {
        "end": Object {
          "column": 32,
          "line": 22,
          "offset": 469,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 21,
          "offset": 413,
        },
      },
      "spread": false,
      "start": 1,
      "type": "list",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 23,
      "offset": 470,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`parser parseMdast() Generates sections with tasks #otm70r 2`] = `
Array [
  Object {
    "contents": Array [],
    "depth": 0,
    "heading": Object {
      "children": Array [
        Object {
          "position": undefined,
          "type": "text",
          "value": "First heading",
        },
      ],
      "depth": 1,
      "position": undefined,
      "type": "heading",
    },
    "id": "1:1-1:16",
    "tasks": Array [
      Object {
        "contentMarkdown": "A top level task  
  ",
        "data": Object {
          "after": "2020-02-23",
          "by": "2020-02-24",
          "id": "abc123",
        },
        "finished": false,
        "id": "abc123",
        "isSequential": false,
        "isTask": true,
        "parentId": "",
      },
      Object {
        "contentMarkdown": "A second task  
 ",
        "data": Object {
          "after": "2020-01-01",
          "by": "2020-02-25",
        },
        "finished": false,
        "id": "{\\"data\\":{\\"after\\":\\"2020-01-01\\",\\"by\\":\\"2020-02-25\\"},\\"text\\":\\"A second task  \\\\n \\"}",
        "isSequential": false,
        "isTask": true,
        "parentId": "",
      },
    ],
  },
  Object {
    "contents": Array [
      Object {
        "children": Array [
          Object {
            "position": undefined,
            "type": "text",
            "value": "Some text under the second heading.",
          },
        ],
        "position": undefined,
        "type": "paragraph",
      },
    ],
    "depth": 0,
    "heading": Object {
      "children": Array [
        Object {
          "position": undefined,
          "type": "text",
          "value": "Sub heading",
        },
      ],
      "depth": 2,
      "position": undefined,
      "type": "heading",
    },
    "id": "8:1-8:15",
    "tasks": Array [
      Object {
        "contentMarkdown": "Third task  
 ",
        "data": Object {
          "after": "2020-02-23",
          "by": "2020-02-25",
        },
        "finished": false,
        "id": "{\\"data\\":{\\"after\\":\\"2020-02-23\\",\\"by\\":\\"2020-02-25\\"},\\"text\\":\\"Third task  \\\\n \\"}",
        "isSequential": false,
        "isTask": true,
        "parentId": "",
      },
      Object {
        "contentMarkdown": "Fourth task on the list  
 ",
        "data": Object {
          "after": "2020-01-01",
          "by": "2020-02-24",
        },
        "finished": false,
        "id": "{\\"data\\":{\\"after\\":\\"2020-01-01\\",\\"by\\":\\"2020-02-24\\"},\\"text\\":\\"Fourth task on the list  \\\\n \\"}",
        "isSequential": false,
        "isTask": true,
        "parentId": "",
      },
      Object {
        "contentMarkdown": "Nested task first",
        "data": Object {},
        "finished": false,
        "id": "{\\"data\\":{},\\"text\\":\\"Nested task first\\"}",
        "isSequential": false,
        "isTask": true,
        "parentId": "{\\"data\\":{\\"after\\":\\"2020-01-01\\",\\"by\\":\\"2020-02-24\\"},\\"text\\":\\"Fourth task on the list  \\\\n \\"}",
      },
      Object {
        "contentMarkdown": "Second nested task",
        "data": Object {},
        "finished": false,
        "id": "{\\"data\\":{},\\"text\\":\\"Second nested task\\"}",
        "isSequential": false,
        "isTask": true,
        "parentId": "{\\"data\\":{\\"after\\":\\"2020-01-01\\",\\"by\\":\\"2020-02-24\\"},\\"text\\":\\"Fourth task on the list  \\\\n \\"}",
      },
    ],
  },
  Object {
    "contents": Array [
      Object {
        "children": Array [
          Object {
            "position": undefined,
            "type": "text",
            "value": "More text without a heading.",
          },
        ],
        "position": undefined,
        "type": "paragraph",
      },
    ],
    "depth": 0,
    "heading": undefined,
    "id": "19:1-19:29",
    "tasks": Array [
      Object {
        "contentMarkdown": "A sequential task",
        "data": Object {},
        "finished": false,
        "id": "{\\"data\\":{},\\"text\\":\\"A sequential task\\"}",
        "isSequential": true,
        "isTask": true,
        "parentId": "",
      },
      Object {
        "contentMarkdown": "A second sequential task",
        "data": Object {},
        "finished": false,
        "id": "{\\"data\\":{},\\"text\\":\\"A second sequential task\\"}",
        "isSequential": true,
        "isTask": true,
        "parentId": "",
      },
    ],
  },
]
`;

exports[`parser parseMdast() debugging #gVI0DY 1`] = `
Array [
  Object {
    "heading": Object {
      "position": undefined,
      "type": "text",
      "value": "First heading",
    },
    "id": "1:1-1:16",
    "taskCount": 2,
  },
  Object {
    "heading": Object {
      "position": undefined,
      "type": "text",
      "value": "Sub heading",
    },
    "id": "8:1-8:15",
    "taskCount": 4,
  },
  Object {
    "heading": undefined,
    "id": "19:1-19:29",
    "taskCount": 2,
  },
]
`;
